--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
-loader_version=0.14.24
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.1
+loader_version=0.15.0
 
 # Mod Properties
-mod_version = 1.6.0
-maven_group = leaf-decay`
+mod_version = 1.7.0
+maven_group = leaf-decay
 archives_base_name = leaf-decay
 
 #Dependencies
-fabric_version=0.90.7+1.20.2
-cloth_config_version = 12.0.110
-mod_menu_version = 8.0.0
+fabric_version=0.91.1+1.20.4
