--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
 minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.1
-loader_version=0.15.0
+yarn_mappings=1.20.4+build.3
+loader_version=0.16.9
 
 # Mod Properties
 mod_version = 1.7.0
 maven_group = leaf-decay
 archives_base_name = leaf-decay
 
-#Dependencies
-fabric_version=0.91.1+1.20.4
+# Fabric API
+fabric_version=0.97.2+1.20.4
