--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.16.9
+minecraftVersion=1.20.4
+yarnMappingVersion=1.20.4+build.3
+fabricVersion=0.16.9
 
 # Mod Properties
-mod_version = 1.8.0
-maven_group = leaf-decay
-archives_base_name = leaf-decay
+modVersion = 1.8.0
+mavenGroup = leaf-decay
+archiveBaseName = leaf-decay
 
 # Fabric API
-fabric_version=0.97.2+1.20.4
+fabricApiVersion=0.97.2+1.20.4
