--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,30 +18,37 @@ jobs:
             yarn-version: '1.21.4+build.8'
             fabric-version: '0.16.10'
             fabric-api-version: '0.115.0+1.21.4'
+            mixin-name: '121'
           - mc-version: '1.21.3'
             yarn-version: '1.21.3+build.2'
             fabric-version: '0.16.10'
             fabric-api-version: '0.114.0+1.21.3'
+            mixin-name: '121'
           - mc-version: '1.21.1'
             yarn-version: '1.21.1+build.3'
             fabric-version: '0.16.10'
             fabric-api-version: '0.115.0+1.21.1'
+            mixin-name: '121'
           - mc-version: '1.21'
             yarn-version: '1.21+build.9'
             fabric-version: '0.16.10'
             fabric-api-version: '0.102.0+1.21'
+            mixin-name: '121'
           - mc-version: '1.20.4'
             yarn-version: '1.20.4+build.3'
             fabric-version: '0.16.10'
             fabric-api-version: '0.97.2+1.20.4'
+            mixin-name: '120'
           - mc-version: '1.20.1'
             yarn-version: '1.20.1+build.10'
             fabric-version: '0.16.10'
             fabric-api-version: '0.92.3+1.20.1'
+            mixin-name: '120'
           - mc-version: '1.16.5'
             yarn-version: '1.16.5+build.10'
             fabric-version: '0.16.10'
             fabric-api-version: '0.42.0+1.16'
+            mixin-name: '116'
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -59,6 +66,7 @@ jobs:
             -PyarnMappingVersion=${{ matrix.yarn-version }} \
             -PfabricVersion=${{ matrix.fabric-version }} \
             -PfabricApiVersion=${{ matrix.fabric-api-version }} \
+            -PmixinName=${{ matrix.mixin-name }} \
             assemble
           mv build/libs/leaf-decay-*.jar .
       - name: Upload JAR as artifact
