--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ processResources {
     inputs.property "version", project.version
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version
+        expand  "version": project.version,
+                "mixinPath": "leafdecay.mixins.${project.mixinName}.json"
     }
 }
 
