--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,57 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraftVersion=1.20.4
-yarnMappingVersion=1.20.4+build.3
-fabricVersion=0.16.9
+minecraftVersion=1.21.4
+yarnMappingVersion=1.21.4+build.8
+fabricVersion=0.16.10
+fabricApiVersion=0.115.0+1.21.4
+mixinName=121
 
 # Mod Properties
 modVersion = 1.8.0
 mavenGroup = leaf-decay
 archiveBaseName = leaf-decay
 
-# Fabric API
-fabricApiVersion=0.97.2+1.20.4
+# For testing older versions
+
+#minecraftVersion=1.21.4
+#yarnMappingVersion=1.21.4+build.8
+#fabricVersion=0.16.10
+#fabricApiVersion=0.115.0+1.21.4
+#mixinName=121
+
+#minecraftVersion=1.21.3
+#yarnMappingVersion=1.21.3+build.2
+#fabricVersion=0.16.10
+#fabricApiVersion=0.114.0+1.21.3
+#mixinName=121
+
+#minecraftVersion=1.21.1
+#yarnMappingVersion=1.21.1+build.3
+#fabricVersion=0.16.10
+#fabricApiVersion=0.115.0+1.21.1
+#mixinName=121
+
+#minecraftVersion=1.21
+#yarnMappingVersion=1.21+build.9
+#fabricVersion=0.16.10
+#fabricApiVersion=0.102.0+1.21
+#mixinName=121
+
+#minecraftVersion=1.20.4
+#yarnMappingVersion=1.20.4+build.3
+#fabricVersion=0.16.10
+#fabricApiVersion=0.97.2+1.20.4
+#mixinName=120
+
+#minecraftVersion=1.20.1
+#yarnMappingVersion=1.20.1+build.10
+#fabricVersion=0.16.10
+#fabricApiVersion=0.92.3+1.20.1
+#mixinName=120
+
+#minecraftVersion=1.16.5
+#yarnMappingVersion=1.16.5+build.10
+#fabricVersion=0.16.10
+#fabricApiVersion=0.42.0+1.16
+#mixinName=116
