add three more supported versions, along with gradle logic to include correct set of blocks for each version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,21 @@ jobs:
             fabric-version: '0.16.10'
             fabric-api-version: '0.92.3+1.20.1'
             mixin-name: '120'
+          - mc-version: '1.19.4'
+            yarn-version: '1.19.4+build.2'
+            fabric-version: '0.16.10'
+            fabric-api-version: '0.87.2+1.19.4'
+            mixin-name: '119'
+          - mc-version: '1.18.2'
+            yarn-version: '1.20.1+build.10'
+            fabric-version: ''
+            fabric-api-version: ''
+            mixin-name: '118'
+          - mc-version: '1.17.1'
+            yarn-version: ''
+            fabric-version: '0.16.10'
+            fabric-api-version: ''
+            mixin-name: '117'
           - mc-version: '1.16.5'
             yarn-version: '1.16.5+build.10'
             fabric-version: '0.16.10'
