--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraftVersion=1.21.4
-yarnMappingVersion=1.21.4+build.8
-fabricVersion=0.16.10
-fabricApiVersion=0.115.0+1.21.4
-mixinName=121
+#minecraftVersion=1.21.4
+#yarnMappingVersion=1.21.4+build.8
+#fabricVersion=0.16.10
+#fabricApiVersion=0.115.0+1.21.4
+#mixinName=121
 
 # Mod Properties
-modVersion = 1.8.1
+modVersion = 1.9.0
 mavenGroup = leaf-decay
 archiveBaseName = leaf-decay
 
@@ -45,6 +45,24 @@ archiveBaseName = leaf-decay
 #fabricVersion=0.16.10
 #fabricApiVersion=0.92.3+1.20.1
 #mixinName=120
+
+#minecraftVersion=1.19.4
+#yarnMappingVersion=1.19.4+build.2
+#fabricVersion=0.16.10
+#fabricApiVersion=0.87.2+1.19.4
+#mixinName=119
+
+#minecraftVersion=1.18.2
+#yarnMappingVersion=1.18.2+build.4
+#fabricVersion=0.16.10
+#fabricApiVersion=0.77.0+1.18.2
+#mixinName=118
+
+minecraftVersion=1.17.1
+yarnMappingVersion=1.17.1+build.65
+fabricVersion=0.16.10
+fabricApiVersion=0.46.1+1.17
+mixinName=117
 
 #minecraftVersion=1.16.5
 #yarnMappingVersion=1.16.5+build.10
