add missing values to job matrix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,14 +50,14 @@ jobs:
             fabric-api-version: '0.87.2+1.19.4'
             mixin-name: '119'
           - mc-version: '1.18.2'
-            yarn-version: '1.20.1+build.10'
-            fabric-version: ''
-            fabric-api-version: ''
+            yarn-version: '1.18.2+build.4'
+            fabric-version: '0.6.10'
+            fabric-api-version: '0.77.0+1.18.2'
             mixin-name: '118'
           - mc-version: '1.17.1'
-            yarn-version: ''
+            yarn-version: '1.17.1+build.65'
             fabric-version: '0.16.10'
-            fabric-api-version: ''
+            fabric-api-version: '0.46.1+1.17'
             mixin-name: '117'
           - mc-version: '1.16.5'
             yarn-version: '1.16.5+build.10'
